feat: 整合包安装完整流程 + 配置统一接口 + 下载基础设施修复 !c
整合包安装（CF/MR）：格式自动识别、并发下载依赖、overrides 解压、分阶段进度共享 download_state
配置接口统一：apply_config/get_config 单一 IPC，ConfigPatch 仅传改过字段，CurseForge API Key DES 加密
下载修复：分片内部探测文件大小、单流增量进度、失败回滚、速度实时计算、Send 错误修复、FileChecker 用探测后大小